--- a/i18n/uovdclient/it.po
+++ b/i18n/uovdclient/it.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2010 Ulteo SAS
 # This file is distributed under the same license as the Ulteo OVD software (http://www.ulteo.com).
 # Automatically generated, 2010.
+# Author: Giuliano Bordonaro, 2009, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: uovdclient\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-29 10:38+0200\n"
-"PO-Revision-Date: 2010-10-29 10:58+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2010-11-02 09:57+0100\n"
+"Last-Translator: Giuliano Bordonaro\n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -20,12 +21,12 @@ msgstr ""
 #: ../../client/web/web/index.php:247
 #: ../../client/web/web/launch.php:137
 msgid "close"
-msgstr ""
+msgstr "chiudi"
 
 #: ../../client/web/web/index.php:264
 #: ../../client/web/web/launch.php:154
 msgid "Loading:"
-msgstr ""
+msgstr "Sto caricando"
 
 #: ../../client/web/web/launch.php:198
 #, php-format
@@ -52,7 +53,7 @@ msgstr "I miei programmi"
 #: ../../client/web/web/index.php:349
 #: ../../client/web/web/launch.php:239
 msgid "Running applications"
-msgstr "Avviarev le applicazioni"
+msgstr "Sto avviando le applicazioni"
 
 #: ../../client/web/web/index.php:361
 #: ../../client/web/web/launch.php:251
@@ -61,45 +62,51 @@ msgstr "I miei file"
 
 #: ../../client/web/web/index.php:190
 msgid "Checking for system compatibility"
-msgstr ""
+msgstr "Verifico  la compatibilità del sistema"
 
 #: ../../client/web/web/index.php:192
 msgid ""
 "If this is your first time here, a Java security window will show up and you "
 "have to accept it to use the service."
 msgstr ""
+"Se questo è il tuo primo accesso, apparirà una finestra di sicurezza Java e "
+"dovrai accettare l'utilizzo del servizio."
 
 #: ../../client/web/web/index.php:193
 msgid ""
 "You are advised to check the \"<i>Always trust content from this publisher</"
 "i>\" checkbox."
 msgstr ""
+"Ti verrà chiesto di controllare la casella \"<i>Accetta sempre i contenuti di "
+"questa fonte.</i>\""
 
 #: ../../client/web/web/index.php:209
 msgid "System compatibility error"
-msgstr ""
+msgstr "Errore nella compatibilità del sistema"
 
 #: ../../client/web/web/index.php:211
 msgid "Java is not available on your system or in your web browser."
-msgstr ""
+msgstr "Java non  presente nel tuo sistema o nel browser web."
 
 #: ../../client/web/web/index.php:212
 msgid ""
 "Please install Java extension for your web browser or contact your "
 "administrator."
 msgstr ""
+"Per favore installa l'ambiente Java per il tuo browser o contatta il tuo "
+"amministratore."
 
 #: ../../client/web/web/index.php:216
 msgid "You have not accepted the Java security window."
-msgstr ""
+msgstr "Non hai accettato la finestra di sicurezza Java."
 
 #: ../../client/web/web/index.php:308
 msgid "Welcome!"
-msgstr ""
+msgstr "Benvenuto!"
 
 #: ../../client/web/web/index.php:407
 msgid "Example: sm.ulteo.com"
-msgstr ""
+msgstr "Ad esempio: sm.ulteo.com"
 
 #: ../../client/web/web/index.php:434
 msgid "Session Manager"
@@ -118,7 +125,7 @@ msgstr "Password"
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:117
 #: ../../client/web/web/index.php:518
 msgid "Use local credentials"
-msgstr ""
+msgstr "Impiega delle credenziali locali"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:32
 #: ../../client/web/web/index.php:521
@@ -139,7 +146,7 @@ msgstr "No"
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:102
 #: ../../client/web/web/index.php:530
 msgid "Mode"
-msgstr ""
+msgstr "Modo"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:109
 #: ../../client/web/web/index.php:534
@@ -153,7 +160,7 @@ msgstr "Portale"
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:70
 #: ../../client/web/web/index.php:544
 msgid "Fullscreen"
-msgstr ""
+msgstr "A pieno schermo"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:104
 #: ../../client/web/web/index.php:556
@@ -162,7 +169,7 @@ msgstr "Lingua"
 
 #: ../../client/web/web/index.php:572
 msgid "Keyboard layout"
-msgstr ""
+msgstr "Mappa della tastiera"
 
 #: ../../client/web/web/index.php:588
 msgid "Use pop-up"
@@ -178,13 +185,13 @@ msgstr "Impostazioni avanzate"
 
 #: ../../client/web/web/index.php:621
 msgid "Connect"
-msgstr ""
+msgstr "Connettere"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:507
 #: ../../client/web/web/login.php:229
 #: ../../client/web/web/media/script/i18n.js.php:25
 msgid "Authentication failed, please double-check your password and try again"
-msgstr ""
+msgstr "Autenticazione non riuscita, controlla la tua password e ritenta"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:508
 #: ../../client/web/web/login.php:232
@@ -193,18 +200,20 @@ msgid ""
 "The system is in maintenance mode, please contact your administrator for "
 "more information"
 msgstr ""
+"Il sistema è nella modalità di manutenzione, contatta l'amministratore per "
+"ulteriori informazioni"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:509
 #: ../../client/web/web/login.php:235
 #: ../../client/web/web/media/script/i18n.js.php:27
 msgid "An internal error occured, please contact your administrator"
-msgstr ""
+msgstr "E' avvenuto un errore interno, contatta l'amministratore"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:510
 #: ../../client/web/web/login.php:238
 #: ../../client/web/web/media/script/i18n.js.php:28
 msgid "You specified an invalid login, please double-check and try again"
-msgstr ""
+msgstr "E' stato specificato un nome utente non valido, verifica e ritenta"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:511
 #: ../../client/web/web/login.php:241
@@ -213,24 +222,27 @@ msgid ""
 "The service is not available, please contact your administrator for more "
 "information"
 msgstr ""
+"Il servizio non è disponibile, sentire l'amministratore per ulteriori "
+"informazioni"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:512
 #: ../../client/web/web/login.php:244
 #: ../../client/web/web/media/script/i18n.js.php:30
 msgid "You are not authorized to launch a session in this mode"
 msgstr ""
+"Non possiedi l'autorizzazione per lanciare una sessione in questa modalità"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:513
 #: ../../client/web/web/login.php:247
 #: ../../client/web/web/media/script/i18n.js.php:31
 msgid "You already have an active session"
-msgstr "Avete già una sessione attiva"
+msgstr "Hai già una sessione attiva"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:769
 #: ../../client/web/web/media/script/i18n.js.php:33
 msgid ""
 "Your session is going to end in 3 minutes, please save all your data now!"
-msgstr ""
+msgstr "La sessione termina tra tre minuti, salva subito i tuoi dati!"
 
 #: ../../client/web/web/media/script/i18n.js.php:35
 msgid "Server: session closed unexpectedly"
@@ -238,11 +250,11 @@ msgstr "Server: sessione chiusa inaspettatamente"
 
 #: ../../client/web/web/media/script/i18n.js.php:36
 msgid "Your session has ended, you can now close the window"
-msgstr "La sessione ha terminato, si può chiudere la finestra"
+msgstr "La sessione è stata chiusa, si può chiudere la finestra"
 
 #: ../../client/web/web/media/script/i18n.js.php:37
 msgid "Your session has ended unexpectedly"
-msgstr "La sessione ha terminato inaspettatamente"
+msgstr "La sessione è terminata inaspettatamente"
 
 #: ../../client/web/web/media/script/i18n.js.php:38
 msgid "error details"
@@ -257,10 +269,12 @@ msgid ""
 "Click <a href=\"javascript:;\" onclick=\"hideEnd(); showLogin(); return "
 "false;\">here</a> to start a new session"
 msgstr ""
+"Clicca <a href=\"javascript:;\" onclick=\"hideEnd(); showLogin(); return "
+"false;\">qui</a> per avviare una nuova sessione"
 
 #: ../../client/web/web/media/script/i18n.js.php:41
 msgid "Click <a href=\"index.php\">here</a> to start a new session"
-msgstr ""
+msgstr "Clicca <a href=\"index.php\">qui</a> per avviare una nuova sessione"
 
 #: ../../client/web/web/media/script/i18n.js.php:43
 msgid "suspend"
@@ -273,15 +287,15 @@ msgstr "riprendi"
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:514
 #: ../../client/web/web/login.php:250
 msgid "An error occured, please contact your administrator"
-msgstr ""
+msgstr "E' avvenuto un errore, contatta l'amministratore"
 
 #: ../../client/web/web/login.php:315
 msgid "Profile"
-msgstr ""
+msgstr "Profilo"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:671
 msgid "You must specify the host field !"
-msgstr ""
+msgstr "Devi specificare il campo host !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:671
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:678
@@ -289,32 +303,32 @@ msgstr ""
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:795
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:45
 msgid "Warning !"
-msgstr ""
+msgstr "Attenzione !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:678
 msgid "You must specify a username !"
-msgstr ""
+msgstr "Devi specificare un nome utente !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:683
 msgid "You must specify a password !"
-msgstr ""
+msgstr "Devi specificare una password !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:737
 msgid "Unable to reach a Session Manager!"
-msgstr ""
+msgstr "Non riesco a trovare un Gestore di Sessione!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:739
 msgid "Host is unreachable!"
-msgstr ""
+msgstr "L'host non è reperibile!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:740
 msgid "Warning!"
-msgstr ""
+msgstr "Attenzione!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:754
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:795
 msgid "Internal error: unsupported session mode"
-msgstr ""
+msgstr "Errore interno: modalità di sessione non ammissibile"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:754
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:847
@@ -327,67 +341,67 @@ msgstr "Errore"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:769
 msgid "Session is going to end"
-msgstr ""
+msgstr "La sessione sta terminando"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:831
 msgid "You have been disconnected"
-msgstr ""
+msgstr "Sei stato disconnesso"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:831
 msgid "Your session has ended"
-msgstr ""
+msgstr "La sessione è terminata"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:847
 msgid "Protocol xml error: "
-msgstr ""
+msgstr "Errore nell'xml del protocollo :"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/NewsFrame.java:49
 msgid "OVD News"
-msgstr ""
+msgstr "Notizie da OVD"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/PortalFrame.java:69
 msgid "Welcome {user}"
-msgstr ""
+msgstr "Benvenuto {user}"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:38
 msgid "Disconnect"
-msgstr ""
+msgstr "Chiudere la connessione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:42
 msgid "Display icons"
-msgstr ""
+msgstr "Mostrare le icone"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:43
 msgid "Hide icons"
-msgstr ""
+msgstr "Nascondere le icone"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:26
 msgid "Connecting to the session manager"
-msgstr ""
+msgstr "Sto connettendo il Gestore di Sessione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:27
 msgid "Get session information from session manager"
-msgstr ""
+msgstr "Ottenere le informazioni circa la sessione dal Gestore di Sessione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:28
 msgid "Get application data from session manager"
-msgstr ""
+msgstr "Ottenere i dati dell'applicazione dal Gestore di Sessione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:29
 msgid "install application data on client"
-msgstr ""
+msgstr "Installare i dati dell'applicazione sul client"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:30
 msgid "Waiting server for session"
-msgstr ""
+msgstr "Attendo il server per aprire una sessione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:31
 msgid "Invalid status"
-msgstr ""
+msgstr "Stato non valido"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:69
 msgid "Maximized"
-msgstr ""
+msgstr "Massimizzato"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:79
 msgid "Host"
@@ -395,19 +409,19 @@ msgstr "Host"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:85
 msgid "Start !"
-msgstr ""
+msgstr "Avvio !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:103
 msgid "Resolution"
-msgstr ""
+msgstr "Risoluzione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:105
 msgid "Keyboard"
-msgstr ""
+msgstr "Tastiera"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:107
 msgid "Auto"
-msgstr ""
+msgstr "Auto"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:108
 msgid "Application"
@@ -415,37 +429,37 @@ msgstr "Applicazione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:115
 msgid "Remember me"
-msgstr ""
+msgstr "Ricordami"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:116
 msgid "Auto-publish shortcuts"
-msgstr ""
+msgstr "Scorciatoie per l'auto pubblicazione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:177
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:816
 msgid "More options ..."
-msgstr ""
+msgstr "Ulteriori possibilità"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:734
 msgid "Fewer options"
-msgstr ""
+msgstr "Minori possibilità"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:32
 msgid "Go back to authentication"
-msgstr ""
+msgstr "Ritorna all'autenticazione"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:44
 msgid "Do you really want to close the window?"
-msgstr ""
+msgstr "Vuoi davvero chiudere la finestra?"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/DisconnectionFrame.java:40
 msgid "Disconnecting !"
-msgstr ""
+msgstr "Disconnessione !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingFrame.java:47
 msgid "Cancel"
-msgstr ""
+msgstr "Cancellare"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingFrame.java:55
 msgid "Now loading"
-msgstr ""
+msgstr "Sto caricando"
