--- a/i18n/uovdclient/pt_BR.po
+++ b/i18n/uovdclient/pt_BR.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2010 Ulteo SAS
 # This file is distributed under the same license as the Ulteo OVD software (http://www.ulteo.com).
 # Automatically generated, 2010.
+# Author: Flávio Veras, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: uovdclient\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-29 10:38+0200\n"
-"PO-Revision-Date: 2010-10-29 10:58+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2010-11-02 09:58+0100\n"
+"Last-Translator: Flávio Veras\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -21,12 +22,12 @@ msgstr ""
 #: ../../client/web/web/index.php:247
 #: ../../client/web/web/launch.php:137
 msgid "close"
-msgstr ""
+msgstr "fechar"
 
 #: ../../client/web/web/index.php:264
 #: ../../client/web/web/launch.php:154
 msgid "Loading:"
-msgstr ""
+msgstr "Carregando:"
 
 #: ../../client/web/web/launch.php:198
 #, php-format
@@ -62,45 +63,51 @@ msgstr "Meus arquivos"
 
 #: ../../client/web/web/index.php:190
 msgid "Checking for system compatibility"
-msgstr ""
+msgstr "Verificando por compatibilidade do sistema"
 
 #: ../../client/web/web/index.php:192
 msgid ""
 "If this is your first time here, a Java security window will show up and you "
 "have to accept it to use the service."
 msgstr ""
+"Se esta é sua primeira vez aqui, uma janela de segurança Java será "
+"apresentada, e você terá que aceitar para usar o serviço."
 
 #: ../../client/web/web/index.php:193
 msgid ""
 "You are advised to check the \"<i>Always trust content from this publisher</"
 "i>\" checkbox."
 msgstr ""
+"Recomenda-se verificar o \"<i>Sempre confiar em conteúdo deste editor\"</i> "
+"checkbox."
 
 #: ../../client/web/web/index.php:209
 msgid "System compatibility error"
-msgstr ""
+msgstr "Sistema de erro de compatibilidade"
 
 #: ../../client/web/web/index.php:211
 msgid "Java is not available on your system or in your web browser."
-msgstr ""
+msgstr "Java não está disponível no seu sistema ou em seu web browser."
 
 #: ../../client/web/web/index.php:212
 msgid ""
 "Please install Java extension for your web browser or contact your "
 "administrator."
 msgstr ""
+"Por favor, instale a extensão do Java para o seu navegador ou contate o "
+"administrador."
 
 #: ../../client/web/web/index.php:216
 msgid "You have not accepted the Java security window."
-msgstr ""
+msgstr "Você não aceitou a janela de segurança do Java."
 
 #: ../../client/web/web/index.php:308
 msgid "Welcome!"
-msgstr ""
+msgstr "Bem-vindo!"
 
 #: ../../client/web/web/index.php:407
 msgid "Example: sm.ulteo.com"
-msgstr ""
+msgstr "Exemplo: sm.ulteo.com"
 
 #: ../../client/web/web/index.php:434
 msgid "Session Manager"
@@ -119,7 +126,7 @@ msgstr "Senha"
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:117
 #: ../../client/web/web/index.php:518
 msgid "Use local credentials"
-msgstr ""
+msgstr "Use credenciais locais"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:32
 #: ../../client/web/web/index.php:521
@@ -140,7 +147,7 @@ msgstr "Não"
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:102
 #: ../../client/web/web/index.php:530
 msgid "Mode"
-msgstr ""
+msgstr "Modo"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:109
 #: ../../client/web/web/index.php:534
@@ -154,7 +161,7 @@ msgstr "Portal"
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:70
 #: ../../client/web/web/index.php:544
 msgid "Fullscreen"
-msgstr ""
+msgstr "Em tela cheia"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:104
 #: ../../client/web/web/index.php:556
@@ -163,7 +170,7 @@ msgstr "Idioma"
 
 #: ../../client/web/web/index.php:572
 msgid "Keyboard layout"
-msgstr ""
+msgstr "Layout do teclado"
 
 #: ../../client/web/web/index.php:588
 msgid "Use pop-up"
@@ -179,13 +186,13 @@ msgstr "Configurações avançadas"
 
 #: ../../client/web/web/index.php:621
 msgid "Connect"
-msgstr ""
+msgstr "Conectar"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:507
 #: ../../client/web/web/login.php:229
 #: ../../client/web/web/media/script/i18n.js.php:25
 msgid "Authentication failed, please double-check your password and try again"
-msgstr ""
+msgstr "Falha de autenticação, por favor, verifique sua senha e tente novamente"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:508
 #: ../../client/web/web/login.php:232
@@ -194,18 +201,22 @@ msgid ""
 "The system is in maintenance mode, please contact your administrator for "
 "more information"
 msgstr ""
+"O sistema está em modo de manutenção, entre em contato com o administrador "
+"para mais informações"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:509
 #: ../../client/web/web/login.php:235
 #: ../../client/web/web/media/script/i18n.js.php:27
 msgid "An internal error occured, please contact your administrator"
-msgstr ""
+msgstr "Ocorreu um erro interno, entre em contato com o administrador"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:510
 #: ../../client/web/web/login.php:238
 #: ../../client/web/web/media/script/i18n.js.php:28
 msgid "You specified an invalid login, please double-check and try again"
 msgstr ""
+"Você especificou um login inválido, por favor, verifique novamente e tente "
+"novamente"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:511
 #: ../../client/web/web/login.php:241
@@ -214,12 +225,14 @@ msgid ""
 "The service is not available, please contact your administrator for more "
 "information"
 msgstr ""
+"O serviço não está disponível, por favor contacte o administrador para mais "
+"informações"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:512
 #: ../../client/web/web/login.php:244
 #: ../../client/web/web/media/script/i18n.js.php:30
 msgid "You are not authorized to launch a session in this mode"
-msgstr ""
+msgstr "Você não está autorizado para iniciar uma sessão neste módulo"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:513
 #: ../../client/web/web/login.php:247
@@ -232,6 +245,8 @@ msgstr "Você já tem uma sessão ativa"
 msgid ""
 "Your session is going to end in 3 minutes, please save all your data now!"
 msgstr ""
+"A sua sessão vai acabar em 3 minutos, por favor, salve todos os seus dados "
+"agora!"
 
 #: ../../client/web/web/media/script/i18n.js.php:35
 msgid "Server: session closed unexpectedly"
@@ -258,10 +273,12 @@ msgid ""
 "Click <a href=\"javascript:;\" onclick=\"hideEnd(); showLogin(); return "
 "false;\">here</a> to start a new session"
 msgstr ""
+"Clique <a href=\"javascript:;\" onclick=\"hideEnd(); showLogin(); return "
+"false;\">aqui</a> para iniciar uma nova sessão"
 
 #: ../../client/web/web/media/script/i18n.js.php:41
 msgid "Click <a href=\"index.php\">here</a> to start a new session"
-msgstr ""
+msgstr "Clique <a href=\"index.php\">aqui</a> para iniciar uma nova sessão"
 
 #: ../../client/web/web/media/script/i18n.js.php:43
 msgid "suspend"
@@ -274,15 +291,15 @@ msgstr "resumo"
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:514
 #: ../../client/web/web/login.php:250
 msgid "An error occured, please contact your administrator"
-msgstr ""
+msgstr "Ocorreu um erro, contate o administrador"
 
 #: ../../client/web/web/login.php:315
 msgid "Profile"
-msgstr ""
+msgstr "Perfil"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:671
 msgid "You must specify the host field !"
-msgstr ""
+msgstr "Você deve especificar o camp host!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:671
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:678
@@ -290,32 +307,32 @@ msgstr ""
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:795
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:45
 msgid "Warning !"
-msgstr ""
+msgstr "Atenção!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:678
 msgid "You must specify a username !"
-msgstr ""
+msgstr "Você deve especificar um nome de usuário!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:683
 msgid "You must specify a password !"
-msgstr ""
+msgstr "Você deve especificar uma senha!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:737
 msgid "Unable to reach a Session Manager!"
-msgstr ""
+msgstr "Não foi possível chegar a uma Sessão de Gerência!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:739
 msgid "Host is unreachable!"
-msgstr ""
+msgstr "Host está inacessível!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:740
 msgid "Warning!"
-msgstr ""
+msgstr "Atenção!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:754
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:795
 msgid "Internal error: unsupported session mode"
-msgstr ""
+msgstr "Erro interno: modo de sessão sem suporte"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:754
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:847
@@ -328,67 +345,67 @@ msgstr "Erro"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:769
 msgid "Session is going to end"
-msgstr ""
+msgstr "Sessão vai acabar"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:831
 msgid "You have been disconnected"
-msgstr ""
+msgstr "Você foi desconectado"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:831
 msgid "Your session has ended"
-msgstr ""
+msgstr "Sua sessão foi encerrada"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:847
 msgid "Protocol xml error: "
-msgstr ""
+msgstr "Erro de protocolo xml:"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/NewsFrame.java:49
 msgid "OVD News"
-msgstr ""
+msgstr "OVD Notícias"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/PortalFrame.java:69
 msgid "Welcome {user}"
-msgstr ""
+msgstr "Bem-vindo {user}"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:38
 msgid "Disconnect"
-msgstr ""
+msgstr "Desconectar"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:42
 msgid "Display icons"
-msgstr ""
+msgstr "Mostrar ícones"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:43
 msgid "Hide icons"
-msgstr ""
+msgstr "Ocultar ícones"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:26
 msgid "Connecting to the session manager"
-msgstr ""
+msgstr "Conectando com o gerenciador de sessão"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:27
 msgid "Get session information from session manager"
-msgstr ""
+msgstr "Receber as informações da sessão do gerenciador de sessão"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:28
 msgid "Get application data from session manager"
-msgstr ""
+msgstr "Obter dados do aplicativo gerenciador de sessão"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:29
 msgid "install application data on client"
-msgstr ""
+msgstr "Instalar os dados de aplicação no cliente"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:30
 msgid "Waiting server for session"
-msgstr ""
+msgstr "Servidor em espera para a sessão"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:31
 msgid "Invalid status"
-msgstr ""
+msgstr "Status inválido"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:69
 msgid "Maximized"
-msgstr ""
+msgstr "Maximizado"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:79
 msgid "Host"
@@ -396,19 +413,19 @@ msgstr "Host"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:85
 msgid "Start !"
-msgstr ""
+msgstr "Iniciar !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:103
 msgid "Resolution"
-msgstr ""
+msgstr "Resolução"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:105
 msgid "Keyboard"
-msgstr ""
+msgstr "Teclado"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:107
 msgid "Auto"
-msgstr ""
+msgstr "Auto"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:108
 msgid "Application"
@@ -416,37 +433,37 @@ msgstr "Aplicação"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:115
 msgid "Remember me"
-msgstr ""
+msgstr "Leia-me"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:116
 msgid "Auto-publish shortcuts"
-msgstr ""
+msgstr "Auto-publicar atalhos"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:177
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:816
 msgid "More options ..."
-msgstr ""
+msgstr "Mais opções ..."
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/AuthFrame.java:734
 msgid "Fewer options"
-msgstr ""
+msgstr "Poucas opções"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:32
 msgid "Go back to authentication"
-msgstr ""
+msgstr "Volte para a autenticação"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LogoutPopup.java:44
 msgid "Do you really want to close the window?"
-msgstr ""
+msgstr "Você realmente deseja fechar a janela?"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/DisconnectionFrame.java:40
 msgid "Disconnecting !"
-msgstr ""
+msgstr "Desligando !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingFrame.java:47
 msgid "Cancel"
-msgstr ""
+msgstr "Cacelar"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingFrame.java:55
 msgid "Now loading"
-msgstr ""
+msgstr "Agora carregando"
